--- a/styles/sass/footer.scss
+++ b/styles/sass/footer.scss
@@ -2,11 +2,13 @@
 @import 'mixins.scss';
 
 #footer{
+    display:none;
     background-color:$background-color;
     position:fixed;bottom:0;
     width:100%;
+    z-index:9999;
     #footer-credits{
         @include custom-font(white,12px,300,$head-font);
-        @include title-position(20px);
+        @include title-position(10px);
     }
 }
